tests/files/flow_controller_tests/should_run/044.cmdr
x = 4;
print toString(x);