tests/files/flow_controller_tests/should_fail/050.cmdr
x = "cat";
print csc(x);